--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -62,7 +62,7 @@
                                     <span>Bénéficiaires</span>
                                 </a>
                             <li>
-                                <a href="#"
+                                <a href="{{ path('app_personnels_index', {'personnel': personnel }) }}"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
                                    {% if app.request.attributes.get('_route') starts with 'app_personnels' %}active{% endif %}"
                                    {% if app.request.attributes.get('_route') starts with 'app_personnels' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
