--- a/templates/personnels/edit.html.twig
+++ b/templates/personnels/edit.html.twig
@@ -4,14 +4,16 @@
 
 {% block body %}
     {% include 'beneficiaires/_menu.html.twig' %}
-    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5 mb-5">
+    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5">
         <div class="container">
             <div class="row">
                 <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8 offset-lg-2">
                     <h1>Modifier L'agent</h1>
                     {{ include('personnels/_form.html.twig') }}
-                    {{ include('personnels/_delete_form.html.twig') }}
-                    <a href="{{ path('app_personnels_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Annuler</a>
+                    <div class="d-flex justify-content-between">
+                        <a href="{{ path('app_personnels_index', {'personnel': personnel|default }) }}"><button class="btn btn-warning">Annuler</button></a>
+                        <button class="btn btn-success" form="personnel">{{ button_label|default('Sauvegarder') }}</button>
+                    </div>
                 </div>
             </div>
         </div>
