--- a/templates/personnels/new.html.twig
+++ b/templates/personnels/new.html.twig
@@ -1,16 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouveau Agent{% endblock %}
+{% block title %}Nouveau Bénéficiaire{% endblock %}
 
 {% block body %}
     {% include 'beneficiaires/_menu.html.twig' %}
-    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5 mb-5">
+    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 offset-lg-2">
-                    <h1>Nouvel Agent</h1>
+                <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 offset-lg-2">
+                    <h1>Nouveau Agent</h1>
                     {{ include('personnels/_form.html.twig') }}
-                    <a href="{{ path('app_personnels_index') }}" class="btn btn-warning mt-2">Annuler</a>
+                    <div class="d-flex justify-content-between">
+                        <a href="{{ path('app_personnels_index', {'personnel': personnel.id|default }) }}"><button class="btn btn-warning">Annuler</button></a>
+                        <button class="btn btn-success" form="personnel">{{ button_label|default('Sauvegarder') }}</button>
+                    </div>
                 </div>
             </div>
         </div>
