--- a/templates/personnels/show.html.twig
+++ b/templates/personnels/show.html.twig
@@ -1,42 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Personnel{% endblock %}
+{% block title %}Supprimer L'agent{% endblock %}
 
 {% block body %}
-    <h1>Personnel</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ personnel.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ personnel.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ personnel.prenom }}</td>
-            </tr>
-            <tr>
-                <th>Fournisseur</th>
-                <td>{{ personnel.fournisseur ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>CompteBanque</th>
-                <td>{{ personnel.compteBanque }}</td>
-            </tr>
-            <tr>
-                <th>SoldeSmap</th>
-                <td>{{ personnel.soldeSmap }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_personnels_index') }}">back to list</a>
-
-    <a href="{{ path('app_personnels_edit', {'id': personnel.id}) }}">edit</a>
-
-    {{ include('personnels/_delete_form.html.twig') }}
+    {% include 'beneficiaires/_menu.html.twig' %}
+    <main id="main" class="col ps-md-2 pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 offset-lg-2">
+                    <h1>L'agent</h1>
+                    <div class="tableOverflow overflow-auto border border-2 p-4 rounded-4">
+                        <table class="table table-hover table-responsive">
+                            <tbody>
+                            <tr>
+                                <th>Nom</th>
+                                <td>{{ personnel.nom }}</td>
+                            </tr>
+                            <tr>
+                                <th>Prénom</th>
+                                <td>{{ personnel.prenom }}</td>
+                            </tr>
+                            <tr>
+                                <th>Fournisseur</th>
+                                <td>{{ personnel.fournisseur ? 'Yes' : 'No' }}</td>
+                            </tr>
+                            <tr>
+                                <th>Compte Banque</th>
+                                <td>{{ personnel.compteBanque }}</td>
+                            </tr>
+                            <tr>
+                                <th>Solde Smap</th>
+                                <td>{{ personnel.soldeSmap }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        {{ include('personnels/_delete_form.html.twig') }}
+                        <div class="d-flex justify-content-between">
+                            <a href="{{ path('app_personnels_index', {'personnel': personnel.id|default }) }}" class="btn btn-warning">Annuler</a>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Supprimer</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    {% include 'beneficiaires/_footer.html.twig' %}
 {% endblock %}
