--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -45,10 +45,10 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="{{ path('app_consultation', {'personnel': personnel|default }) }}"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
-                                   {% if app.request.attributes.get('_route') starts with 'app_consultations' %}active{% endif %}"
-                                   {% if app.request.attributes.get('_route') starts with 'app_consultations' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
+                                   {% if app.request.attributes.get('_route') starts with 'app_consultation' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_consultation' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Consultations</span>
                                 </a>
@@ -62,10 +62,10 @@
                                     <span>Bénéficiaires</span>
                                 </a>
                             <li>
-                                <a href="{{ path('app_personnels_index', {'personnel': personnel|default  }) }}"
+                                <a href="{{ path('app_personnel_index', {'personnel': personnel|default  }) }}"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
-                                   {% if app.request.attributes.get('_route') starts with 'app_personnels' %}active{% endif %}"
-                                   {% if app.request.attributes.get('_route') starts with 'app_personnels' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
+                                   {% if app.request.attributes.get('_route') starts with 'app_personnel' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_personnel' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Signalétique</span>
                                 </a>
